--- a/performance_evaluation/scot_performance.ipynb
+++ b/performance_evaluation/scot_performance.ipynb
@@ -86,7 +86,7 @@
     "https://scikit-learn.org/1.5/modules/generated/sklearn.metrics.roc_auc_score.html#roc-auc-score\n",
     "\"\"\"\n",
     "\n",
-    "def evaluation_metrics(predictions: list[dict], ground_truth: list[dict]):\n",
+    "def generate_metrics(predictions: list[dict], ground_truth: list[dict]):\n",
     "    # Predictions and ground truth data\n",
     "\n",
     "    # Extract labels from ground truth and predictions\n",
@@ -100,7 +100,7 @@
     "        \"Missing Subgraph due to undefined reason\": 0\n",
     "    }\n",
     "    \"\"\"\n",
-    "    labels = list(predictions[0].keys())\n",
+    "    labels = list(ground_truth[0].keys())\n",
     "\n",
     "    # Convert to array of [0, 1] labels based on key-value pairs, order doesn't matter\n",
     "    y_true = np.array([[gt[label] for label in labels] for gt in ground_truth])\n",
@@ -128,6 +128,59 @@
     "            print(\"----------------------------------------------\")\n",
     "        except ValueError:\n",
     "            print(f\"\\nROC AUC and Average Precision for {label} could not be calculated due to lack of positive samples.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_average_inference_time(predictions: list[dict]):\n",
+    "    \"\"\"\n",
+    "    Calculate the average inference time from the predictions.\n",
+    "    Assumes that each prediction dictionary contains an 'inference_time' key.\n",
+    "    \"\"\"\n",
+    "    total_time = 0\n",
+    "    count = 0\n",
+    "\n",
+    "    for pred in predictions:\n",
+    "        if 'inference_time' in pred:\n",
+    "            total_time += pred['inference_time']\n",
+    "            count += 1\n",
+    "\n",
+    "    if count == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return total_time / count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def evaluate(results_file_path: str, ground_truth_metadata: dict):\n",
+    "    with open (results_file_path) as file:\n",
+    "        results = json.load(file)\n",
+    "    \n",
+    "    predictions = []\n",
+    "    transformed_gt = transform_label_dict(ground_truth_metadata)\n",
+    "    ground_truth = []\n",
+    "\n",
+    "    for dicom_id, pred in results.items():\n",
+    "        predictions.append(pred)\n",
+    "        ground_truth.append(transformed_gt[dicom_id])\n",
+    "\n",
+    "    assert len(predictions) == len(ground_truth)\n",
+    "\n",
+    "    print(\"Average Inference Time:\", round(get_average_inference_time(predictions), 3), \"seconds\")\n",
+    "\n",
+    "    generate_metrics(predictions, ground_truth)\n",
+    "    "
    ]
   },
   {
@@ -217,23 +270,7 @@
     }
    ],
    "source": [
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open(\".\\llama3.211BV\\llama3.2_11B_scot_results.json\", 'r') as file:\n",
-    "    llama3211B_scot_results = json.load(file)\n",
-    "\n",
-    "print(len(llama3211B_scot_results))\n",
-    "\n",
-    "for dicom_id, pred in llama3211B_scot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\llama3.211BV\\llama3.2_11B_scot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -306,21 +343,7 @@
     }
    ],
    "source": [
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open(\".\\mistral\\mistral_7B_scot_results.json\", 'r') as file:\n",
-    "    mistral_scot_results = json.load(file)\n",
-    "\n",
-    "for dicom_id, pred in mistral_scot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\mistral\\mistral_7B_scot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -393,21 +416,7 @@
     }
    ],
    "source": [
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open(\".\\gpt4o\\gpt4o_mini_scot_results_prompt2.json\", 'r') as file:\n",
-    "    gpt4o_mini_scot_results2 = json.load(file)\n",
-    "\n",
-    "for dicom_id, pred in gpt4o_mini_scot_results2.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\gpt4o_mini\\gpt4o_mini_scot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   }
  ],
