--- a/performance_evaluation/zero_few_shot_performance.ipynb
+++ b/performance_evaluation/zero_few_shot_performance.ipynb
@@ -78,7 +78,7 @@
     "https://scikit-learn.org/1.5/modules/generated/sklearn.metrics.roc_auc_score.html#roc-auc-score\n",
     "\"\"\"\n",
     "\n",
-    "def evaluation_metrics(predictions: list[dict], ground_truth: list[dict]):\n",
+    "def generate_metrics(predictions: list[dict], ground_truth: list[dict]):\n",
     "    # Predictions and ground truth data\n",
     "\n",
     "    # Extract labels from ground truth and predictions\n",
@@ -111,6 +111,59 @@
     "        \n",
     "        except ValueError:\n",
     "            print(f\"\\nROC AUC and Average Precision for {label} could not be calculated due to lack of positive samples.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_average_inference_time(predictions: list[dict]):\n",
+    "    \"\"\"\n",
+    "    Calculate the average inference time from the predictions.\n",
+    "    Assumes that each prediction dictionary contains an 'inference_time' key.\n",
+    "    \"\"\"\n",
+    "    total_time = 0\n",
+    "    count = 0\n",
+    "\n",
+    "    for pred in predictions:\n",
+    "        if 'inference_time' in pred:\n",
+    "            total_time += pred['inference_time']\n",
+    "            count += 1\n",
+    "\n",
+    "    if count == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return total_time / count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def evaluate(results_file_path: str, ground_truth_metadata: dict):\n",
+    "    with open (results_file_path) as file:\n",
+    "        results = json.load(file)\n",
+    "    \n",
+    "    predictions = []\n",
+    "    transformed_gt = transform_label_dict(ground_truth_metadata)\n",
+    "    ground_truth = []\n",
+    "\n",
+    "    for dicom_id, pred in results.items():\n",
+    "        predictions.append(pred)\n",
+    "        ground_truth.append(transformed_gt[dicom_id])\n",
+    "\n",
+    "    assert len(predictions) == len(ground_truth)\n",
+    "\n",
+    "    print(\"Average Inference Time:\", round(get_average_inference_time(predictions), 3), \"seconds\")\n",
+    "\n",
+    "    generate_metrics(predictions, ground_truth)\n",
+    "    "
    ]
   },
   {
@@ -199,22 +252,7 @@
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open(\".\\llama3.211BV\\llama3.2_11B_zshot_predictions.json\") as file:\n",
-    "    ll3211BV_saved_zshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in ll3211BV_saved_zshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\llama3.211BV\\llama3.2_11B_zshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -280,23 +318,7 @@
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open(\"llama3.211BV\\llama3.2_11B_fshot_predictions.json\") as file:\n",
-    "    ll3211BV_saved_fshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in ll3211BV_saved_fshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "print(len(predictions), len(ground_truth))\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\llama3.211BV\\llama3.2_11B_fshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -360,20 +382,7 @@
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open (\".\\mistral\\mistral_zshot_predictions.json\") as file:\n",
-    "    mistral_saved_zshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in mistral_saved_zshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\mistral\\mistral_fshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -438,20 +447,7 @@
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open (\".\\mistral\\mistral_fshot_predictions.json\") as file:\n",
-    "    mistral_saved_fshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in mistral_saved_fshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\mistral\\mistral_zshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -515,24 +511,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open (\".\\gpt4o\\gpt4o_mini_zshot_predictions.json\") as file:\n",
-    "    gpt4oMini_saved_zshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in gpt4oMini_saved_zshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "assert len(predictions) == len(ground_truth)\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\gpt4o\\gpt4o_mini_zshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -589,20 +568,7 @@
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open (\".\\gpt4o\\gpt4o_mini_fshot_predictions.json\") as file:\n",
-    "    gpt4oMini_saved_fshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in gpt4oMini_saved_fshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\".\\gpt4o\\gpt4o_mini_fshot_predictions.json\", orig_xy_ground_truth_metadata)"
    ]
   }
  ],
