--- a/performance_evaluation/tot_performance.ipynb
+++ b/performance_evaluation/tot_performance.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupiter notebook evaluates the performance of the baseline zero-shot and few-shot prompting on the synthesized error dataset, to compare the effectiveness of the SCot framework in improving multimodal reasoning across different LLM/LMM models."
+    "This Jupiter notebook evaluates the performance of the baseline zero-shot and few-shot Tree of Thoughts prompting on the synthesized error dataset."
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,55 +213,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Inference Time: 5.242 seconds\n",
+      "Average Inference Time: 5.938 seconds\n",
       "Classification Report:\n",
       "                                                precision    recall  f1-score   support\n",
       "\n",
-      "    Missed abnormality due to missing fixation     0.0000    0.0000    0.0000       432\n",
-      "    Missed abnormality due to reduced fixation     0.4386    1.0000    0.6097       432\n",
-      "Missed abnormality due to incomplete knowledge     0.1599    1.0000    0.2757       161\n",
-      "                        No missing abnormality     1.0000    0.1759    0.2992       216\n",
+      "    Missed abnormality due to missing fixation     0.5792    0.3218    0.4137       432\n",
+      "    Missed abnormality due to reduced fixation     0.4435    0.9907    0.6127       432\n",
+      "Missed abnormality due to incomplete knowledge     0.1571    1.0000    0.2715       161\n",
+      "                        No missing abnormality     1.0000    0.0417    0.0800       216\n",
       "\n",
-      "                                     micro avg     0.3107    0.5085    0.3857      1241\n",
-      "                                     macro avg     0.3996    0.5440    0.2962      1241\n",
-      "                                  weighted avg     0.3475    0.5085    0.3001      1241\n",
-      "                                   samples avg     0.3078    0.5102    0.3753      1241\n",
+      "                                     micro avg     0.3292    0.5939    0.4236      1241\n",
+      "                                     macro avg     0.5449    0.5885    0.3445      1241\n",
+      "                                  weighted avg     0.5504    0.5939    0.4065      1241\n",
+      "                                   samples avg     0.3115    0.5746    0.3937      1241\n",
       "\n",
       "\n",
       "Accuracy Score: 0.0\n",
-      "Hamming Loss: 0.4902439024390244\n",
-      "ROC AUC Score: 0.5328158180313535\n",
+      "Hamming Loss: 0.4892682926829268\n",
+      "ROC AUC Score: 0.5347851672287802\n",
       "\n",
-      "Accuracy for Missed abnormality due to missing fixation: 0.577560975609756\n",
-      "ROC AUC for Missed abnormality due to missing fixation: 0.4991568296795953\n",
-      "Hamming loss 0.4224390243902439\n",
+      "Accuracy for Missed abnormality due to missing fixation: 0.615609756097561\n",
+      "ROC AUC for Missed abnormality due to missing fixation: 0.5757194272687527\n",
+      "Hamming loss 0.38439024390243903\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to reduced fixation: 0.4604878048780488\n",
-      "ROC AUC for Missed abnormality due to reduced fixation: 0.533726812816189\n",
-      "Hamming loss 0.5395121951219513\n",
+      "Accuracy for Missed abnormality due to reduced fixation: 0.4721951219512195\n",
+      "ROC AUC for Missed abnormality due to reduced fixation: 0.5425879083130348\n",
+      "Hamming loss 0.5278048780487805\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to incomplete knowledge: 0.1746341463414634\n",
-      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5104166666666667\n",
-      "Hamming loss 0.8253658536585365\n",
+      "Accuracy for Missed abnormality due to incomplete knowledge: 0.15707317073170732\n",
+      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5\n",
+      "Hamming loss 0.8429268292682927\n",
       "--------------------------------------------------\n",
-      "Accuracy for No missing abnormality: 0.8263414634146341\n",
-      "ROC AUC for No missing abnormality: 0.587962962962963\n",
-      "Hamming loss 0.17365853658536584\n",
+      "Accuracy for No missing abnormality: 0.7980487804878049\n",
+      "ROC AUC for No missing abnormality: 0.5208333333333334\n",
+      "Hamming loss 0.20195121951219513\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "evaluate(\"../totcot/gpt4o_mini_tot_results.json\", orig_xy_ground_truth_metadata)"
+    "evaluate(\"../totcot/gpt4o_mini_tot_zero_shot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   },
   {
@@ -273,65 +271,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Average Inference Time: 6.782 seconds\n",
       "Classification Report:\n",
       "                                                precision    recall  f1-score   support\n",
       "\n",
-      "    Missed abnormality due to missing fixation     0.5519    0.9477    0.6976       421\n",
-      "    Missed abnormality due to reduced fixation     0.6901    0.7458    0.7169       421\n",
-      "Missed abnormality due to incomplete knowledge     0.1860    0.1491    0.1655       161\n",
-      "                        No missing abnormality     0.8120    1.0000    0.8963       216\n",
+      "    Missed abnormality due to missing fixation     0.6935    0.5972    0.6418        72\n",
+      "    Missed abnormality due to reduced fixation     0.6522    0.2542    0.3659        59\n",
+      "Missed abnormality due to incomplete knowledge     0.5000    0.1818    0.2667        22\n",
+      "                        No missing abnormality     0.7826    1.0000    0.8780       198\n",
       "\n",
-      "                                     micro avg     0.6058    0.7818    0.6827      1219\n",
-      "                                     macro avg     0.5600    0.7107    0.6191      1219\n",
-      "                                  weighted avg     0.5974    0.7818    0.6692      1219\n",
-      "                                   samples avg     0.6157    0.7406    0.6555      1219\n",
+      "                                     micro avg     0.7514    0.7407    0.7461       351\n",
+      "                                     macro avg     0.6571    0.5083    0.5381       351\n",
+      "                                  weighted avg     0.7247    0.7407    0.7052       351\n",
+      "                                   samples avg     0.7570    0.7461    0.7451       351\n",
       "\n",
       "\n",
-      "Accuracy Score: 0.4832347140039448\n",
-      "Hamming Loss: 0.21844181459566075\n",
-      "ROC AUC Score: 0.7340943778462388\n",
+      "Accuracy Score: 0.6915887850467289\n",
+      "Hamming Loss: 0.1378504672897196\n",
+      "ROC AUC Score: 0.683238215272663\n",
       "\n",
-      "Accuracy for Missed abnormality due to missing fixation: 0.6587771203155819\n",
-      "ROC AUC for Missed abnormality due to missing fixation: 0.700684550155616\n",
-      "Hamming loss 0.34122287968441817\n",
+      "Accuracy for Missed abnormality due to missing fixation: 0.8504672897196262\n",
+      "ROC AUC for Missed abnormality due to missing fixation: 0.7604585006693441\n",
+      "Hamming loss 0.14953271028037382\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to reduced fixation: 0.7554240631163708\n",
-      "ROC AUC for Missed abnormality due to reduced fixation: 0.7540346000248344\n",
-      "Hamming loss 0.2445759368836292\n",
+      "Accuracy for Missed abnormality due to reduced fixation: 0.838006230529595\n",
+      "ROC AUC for Missed abnormality due to reduced fixation: 0.6118514684952774\n",
+      "Hamming loss 0.16199376947040497\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to incomplete knowledge: 0.7613412228796844\n",
-      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5129866820065098\n",
-      "Hamming loss 0.23865877712031558\n",
+      "Accuracy for Missed abnormality due to incomplete knowledge: 0.9314641744548287\n",
+      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5842201276983886\n",
+      "Hamming loss 0.06853582554517133\n",
       "--------------------------------------------------\n",
-      "Accuracy for No missing abnormality: 0.9506903353057199\n",
-      "ROC AUC for No missing abnormality: 0.968671679197995\n",
-      "Hamming loss 0.04930966469428008\n",
+      "Accuracy for No missing abnormality: 0.8286604361370716\n",
+      "ROC AUC for No missing abnormality: 0.7764227642276422\n",
+      "Hamming loss 0.17133956386292834\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# Replace with the actual file paths\n",
-    "\n",
-    "with open (\".\\gpt4o\\gpt4o_mini_fshot_predictions.json\") as file:\n",
-    "    gpt4oMini_saved_fshot_results = json.load(file)\n",
-    "\n",
-    "predictions = []\n",
-    "transformed_gt = transform_label_dict(orig_xy_ground_truth_metadata)\n",
-    "ground_truth = []\n",
-    "\n",
-    "for dicom_id, pred in gpt4oMini_saved_fshot_results.items():\n",
-    "    predictions.append(pred)\n",
-    "    ground_truth.append(transformed_gt[dicom_id])\n",
-    "\n",
-    "evaluation_metrics(predictions, ground_truth)"
+    "evaluate(\"../gotcot/gpt4o_mini_got_few_shot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   }
  ],
