Update got/tot jupiter notebooks

--- a/performance_evaluation/got_performance.ipynb
+++ b/performance_evaluation/got_performance.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,6 +267,57 @@
    "metadata": {},
    "source": [
     "## Few Shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Inference Time: 6.798 seconds\n",
+      "Classification Report:\n",
+      "                                                precision    recall  f1-score   support\n",
+      "\n",
+      "    Missed abnormality due to missing fixation     0.7077    0.5974    0.6479        77\n",
+      "    Missed abnormality due to reduced fixation     0.6522    0.2459    0.3571        61\n",
+      "Missed abnormality due to incomplete knowledge     0.3636    0.1818    0.2424        22\n",
+      "                        No missing abnormality     0.7835    1.0000    0.8786       199\n",
+      "\n",
+      "                                     micro avg     0.7479    0.7354    0.7416       359\n",
+      "                                     macro avg     0.6267    0.5063    0.5315       359\n",
+      "                                  weighted avg     0.7192    0.7354    0.7015       359\n",
+      "                                   samples avg     0.7538    0.7431    0.7421       359\n",
+      "\n",
+      "\n",
+      "Accuracy Score: 0.6880733944954128\n",
+      "Hamming Loss: 0.14067278287461774\n",
+      "ROC AUC Score: 0.6833011138653732\n",
+      "\n",
+      "Accuracy for Missed abnormality due to missing fixation: 0.8470948012232415\n",
+      "ROC AUC for Missed abnormality due to missing fixation: 0.7607012987012987\n",
+      "Hamming loss 0.1529051987767584\n",
+      "--------------------------------------------------\n",
+      "Accuracy for Missed abnormality due to reduced fixation: 0.8348623853211009\n",
+      "ROC AUC for Missed abnormality due to reduced fixation: 0.6079132256871688\n",
+      "Hamming loss 0.1651376146788991\n",
+      "--------------------------------------------------\n",
+      "Accuracy for Missed abnormality due to incomplete knowledge: 0.9235474006116208\n",
+      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5794336810730253\n",
+      "Hamming loss 0.0764525993883792\n",
+      "--------------------------------------------------\n",
+      "Accuracy for No missing abnormality: 0.8318042813455657\n",
+      "ROC AUC for No missing abnormality: 0.78515625\n",
+      "Hamming loss 0.16819571865443425\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(\"../gotcot/gpt4o_mini_got_few_shot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   }
  ],
