--- a/performance_evaluation/tot_performance.ipynb
+++ b/performance_evaluation/tot_performance.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +212,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zero Shot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,46 +285,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Inference Time: 6.782 seconds\n",
+      "Average Inference Time: 7.457 seconds\n",
       "Classification Report:\n",
       "                                                precision    recall  f1-score   support\n",
       "\n",
-      "    Missed abnormality due to missing fixation     0.6935    0.5972    0.6418        72\n",
-      "    Missed abnormality due to reduced fixation     0.6522    0.2542    0.3659        59\n",
-      "Missed abnormality due to incomplete knowledge     0.5000    0.1818    0.2667        22\n",
-      "                        No missing abnormality     0.7826    1.0000    0.8780       198\n",
+      "    Missed abnormality due to missing fixation     0.6650    0.3032    0.4165       432\n",
+      "    Missed abnormality due to reduced fixation     0.7326    0.3171    0.4426       432\n",
+      "Missed abnormality due to incomplete knowledge     0.1789    1.0000    0.3035       161\n",
+      "                        No missing abnormality     1.0000    0.5602    0.7181       216\n",
       "\n",
-      "                                     micro avg     0.7514    0.7407    0.7461       351\n",
-      "                                     macro avg     0.6571    0.5083    0.5381       351\n",
-      "                                  weighted avg     0.7247    0.7407    0.7052       351\n",
-      "                                   samples avg     0.7570    0.7461    0.7451       351\n",
+      "                                     micro avg     0.3915    0.4432    0.4157      1241\n",
+      "                                     macro avg     0.6441    0.5451    0.4702      1241\n",
+      "                                  weighted avg     0.6838    0.4432    0.4634      1241\n",
+      "                                   samples avg     0.3859    0.4576    0.4098      1241\n",
       "\n",
       "\n",
-      "Accuracy Score: 0.6915887850467289\n",
-      "Hamming Loss: 0.1378504672897196\n",
-      "ROC AUC Score: 0.683238215272663\n",
+      "Accuracy Score: 0.2370731707317073\n",
+      "Hamming Loss: 0.3770731707317073\n",
+      "ROC AUC Score: 0.6412019958934483\n",
       "\n",
-      "Accuracy for Missed abnormality due to missing fixation: 0.8504672897196262\n",
-      "ROC AUC for Missed abnormality due to missing fixation: 0.7604585006693441\n",
-      "Hamming loss 0.14953271028037382\n",
+      "Accuracy for Missed abnormality due to missing fixation: 0.6419512195121951\n",
+      "ROC AUC for Missed abnormality due to missing fixation: 0.5959711292236587\n",
+      "Hamming loss 0.35804878048780486\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to reduced fixation: 0.838006230529595\n",
-      "ROC AUC for Missed abnormality due to reduced fixation: 0.6118514684952774\n",
-      "Hamming loss 0.16199376947040497\n",
+      "Accuracy for Missed abnormality due to reduced fixation: 0.6634146341463415\n",
+      "ROC AUC for Missed abnormality due to reduced fixation: 0.6164062987945788\n",
+      "Hamming loss 0.33658536585365856\n",
       "--------------------------------------------------\n",
-      "Accuracy for Missed abnormality due to incomplete knowledge: 0.9314641744548287\n",
-      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.5842201276983886\n",
-      "Hamming loss 0.06853582554517133\n",
+      "Accuracy for Missed abnormality due to incomplete knowledge: 0.27902439024390246\n",
+      "ROC AUC for Missed abnormality due to incomplete knowledge: 0.572337962962963\n",
+      "Hamming loss 0.7209756097560975\n",
       "--------------------------------------------------\n",
-      "Accuracy for No missing abnormality: 0.8286604361370716\n",
-      "ROC AUC for No missing abnormality: 0.7764227642276422\n",
-      "Hamming loss 0.17133956386292834\n",
+      "Accuracy for No missing abnormality: 0.9073170731707317\n",
+      "ROC AUC for No missing abnormality: 0.7800925925925926\n",
+      "Hamming loss 0.09268292682926829\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "evaluate(\"../gotcot/gpt4o_mini_got_few_shot_results.json\", orig_xy_ground_truth_metadata)"
+    "evaluate(\"../totcot/gpt4o_mini_tot_few_shot_results.json\", orig_xy_ground_truth_metadata)"
    ]
   }
  ],
