Reformat directories for clarity

--- a/performance_evaluation/scot_performance.ipynb
+++ b/performance_evaluation/scot_performance.ipynb
@@ -92,7 +92,7 @@
     "    # Extract labels from ground truth and predictions\n",
     "\n",
     "    \"\"\"\n",
-    "    SCot Prompt 2: X_Original, Y_Original\n",
+    "    SCoT Prompt 2: X_Original, Y_Original\n",
     "    {\n",
     "        \"No Missing Subgraph\": 0,\n",
     "        \"Missing Subgraph due to Missing fixation\": 1,\n",
