--- a/performance_evaluation/zero_few_shot_performance.ipynb
+++ b/performance_evaluation/zero_few_shot_performance.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupiter notebook evaluates the performance of the baseline zero-shot and few-shot prompting on the synthesized error dataset, to compare the effectiveness of the SCot framework in improving multimodal reasoning across different LLM/LMM models."
+    "This Jupiter notebook evaluates the performance of the baseline zero-shot and few-shot prompting on the synthesized error dataset, to compare the effectiveness of the SCoT framework in improving multimodal reasoning across different LLM/LMM models."
    ]
   },
   {
